style: formata todo o código para deixar ele mais legivel